fix: contact gaps

--- a/screens/Contact/sections/HeroSection/index.module.css
+++ b/screens/Contact/sections/HeroSection/index.module.css
@@ -25,10 +25,6 @@
   z-index: 0;
   max-width: max-content;
   height: max-content;
-
-  @media (max-width: 768px) {
-    gap: 48px;
-  }
 }
 
 .heroTitle {
